# ros2-object-detection-using-mediapipe

./: README.md  build.sh
docker/: .env  Dockerfile  docker-compose.yaml  ros_entrypoint.sh
robot_ws/src/object_detection/: CMakeLists.txt  package.xml
robot_ws/src/object_detection/launch/: object_detection_launch.py
robot_ws/src/object_detection/object_detection/: object_detection.py  object_detection_main.py  object_detection_node.py  visualizer.py
robot_ws/src/object_detection/params/: object_detection.yaml
robot_ws/src/object_detection/test/: test_object_detection.py
robot_ws/src/object_detection_msgs/: CMakeLists.txt  package.xml
robot_ws/src/object_detection_msgs/msg/: Detection.msg
